@@ -118,6 +118,7 @@ CREATE TABLE sys_dmail_maillog (
   uid int(11) unsigned NOT NULL auto_increment,
   mid int(11) unsigned DEFAULT '0' NOT NULL,
   rid int(11) unsigned DEFAULT '0' NOT NULL,
+  email varchar(255) DEFAULT '' NOT NULL,
   rtbl char(1) DEFAULT '' NOT NULL,
   tstamp int(11) unsigned DEFAULT '0' NOT NULL,
   url tinyblob NOT NULL,
