@@ -1,6 +1,7 @@
 2006-01-31 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
-	* Add deleted column to sys_dmail table.
+	* Add deleted column to sys_dmail table (bugtracker issue 2190).
 	* Remove message-id setting from dmailer class. Use updated version of core t3lib_htmlmail.
+	* Add email column to sys_dmail_maillog (bugtracker issue 2191).
 
 2006-01-30 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
 	* Adjust default value of proposed messageid.
